--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ralali/rematch-navigation-plugin"
+  },
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "react-native": "src/index.ts",
@@ -32,7 +36,7 @@
     "@react-navigation/native": ">=5.0.0",
     "@rematch/core": ">=1.0.0",
     "react": ">=16.7.0-alpha",
-    "react-native": ">=0.59.0"
+    "react-native": ">= 0.55.0"
   },
   "@react-native-community/bob": {
     "source": "src",
