--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ node_modules/
 # generated files by bob
 lib/
 
-yarn-error.log
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 .idea/
