--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ralali/rematch-navigation-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React Navigation 5 plugin for Rematch",
   "author": "@bobbyecho",
   "license": "MIT",
@@ -15,7 +15,7 @@
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "react-native": "src/index.ts",
-  "types": "lib/typescript/src/index.d.ts",
+  "types": "lib/typescript/index.d.ts",
   "files": [
     "lib/",
     "src/"
@@ -26,9 +26,9 @@
   "devDependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/bob": "^0.16.2",
+    "@react-navigation/native": "^5.7.3",
     "@types/react": "^16.9.45",
     "@types/react-native": "^0.63.6",
-    "@react-navigation/native": "^5.7.3",
     "typescript": "^3.9.7"
   },
   "peerDependencies": {
@@ -46,5 +46,6 @@
       "module",
       "typescript"
     ]
-  }
+  },
+  "dependencies": {}
 }
